Support stand-alone OIDC authentication (#124)
* Support stand alone OIDC auth for gRPC service and Iceberg REST API, and add Keycloak-based tests
* Update CLI to support token-based auth