@@ -1,5 +1,22 @@
 # API Access
 
+## Authentication & permissions
+
+Floecat supports two client authentication modes:
+
+- **Authorization header (Bearer token)**: pass `--token` (or `FLOECAT_TOKEN`). The token is sent
+  as `authorization: Bearer <token>` by default. The server derives identity and account from token
+  claims.
+- **Session header (custom)**: pass `--session-token` (or `FLOECAT_SESSION_TOKEN`) and optionally
+  set `--session-header` (default `x-floe-session`). This is functionally equivalent to
+  authorization header auth but uses a custom header name.
+
+How to tell if you have permission:
+
+- If a command succeeds, you have the required permission.
+- If it fails with `PERMISSION_DENIED` and a message like `missing permission: <perm>`, you do not
+  have that permission for the current identity.
+
 ## gRPC
 
 Use any gRPC client (for example `grpcurl`) once the service listens on `localhost:9100`.
@@ -7,6 +24,25 @@ Use any gRPC client (for example `grpcurl`) once the service listens on `localho
 ```bash
 grpcurl -plaintext -d '{}' \
   localhost:9100 ai.floedb.floecat.catalog.CatalogService/ListCatalogs
+```
+
+If the server is configured for authorization-header auth (default header `authorization`):
+
+```bash
+grpcurl -plaintext \
+  -H 'authorization: Bearer <TOKEN>' \
+  -d '{}' localhost:9100 \
+  ai.floedb.floecat.catalog.CatalogService/ListCatalogs
+```
+
+If the server is configured for session-header auth (default header `x-floe-session`):
+
+```bash
+grpcurl -plaintext \
+  -H 'x-floe-session: <TOKEN>' \
+  -d '{}' localhost:9100 \
+  ai.floedb.floecat.catalog.CatalogService/ListCatalogs
+```
 
 grpcurl -plaintext -d '{
   "catalog_id": {"account_id":"5eaa9cd5-7d08-3750-9457-cfe800b0b9d2",
@@ -29,10 +65,12 @@ java --enable-native-access=ALL-UNNAMED \
   -jar client-cli/target/quarkus-app/quarkus-run.jar
 ```
 
-Set the account context first:
+If you use bearer-token auth, provide it via `--token` or `FLOECAT_TOKEN`:
 
-```
-account 5eaa9cd5-7d08-3750-9457-cfe800b0b9d2
+```bash
+FLOECAT_TOKEN=<TOKEN> \
+  java --enable-native-access=ALL-UNNAMED \
+  -jar client-cli/target/quarkus-app/quarkus-run.jar
 ```
 
 Then explore `catalog`, `namespace`, `table`, `connector`, and `query` commands. The CLI exercises
